--- a/Bert.ipynb
+++ b/Bert.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,30 @@
     "summary_logits = model(**inputs).logits\n",
     "summary = tokenizer.decode(torch.argmax(summary_logits, dim=1))\n",
     "print(\"Summary:\", summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "General code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Create a 2D tensor\n",
+    "a = torch.randn(4, 4)\n",
+    "print(a)\n",
+    "\n",
+    "# Overall argmax\n",
+    "print(torch.argmax(a))\n",
+    "\n",
+    "# Argmax along dimension 1\n",
+    "print(torch.argmax(a, dim=1))"
    ]
   }
  ],
