--- a/Pipline@huggingface.ipynb
+++ b/Pipline@huggingface.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "height": 47
    },
    "outputs": [],
    "source": [
-    "# pip install transformers\n",
-    "# pip install torch\n",
+    "# !pip install transformers\n",
+    "# !pip install torch\n",
     "\n",
     "from transformers.utils import logging\n",
     "logging.set_verbosity_error() #- Here is some code that suppresses warning messages.\n",
@@ -44,11 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "height": 47
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'translation_text': 'मेरा पिल्ला प्यारा है, आपका बिल्ली का बच्चा प्यारा है उसका पांडा दोस्ताना है उसका लामा विचारशील है हमारे पास सभी अच्छे पालतू जानवर हैं'}]\n"
+     ]
+    }
+   ],
    "source": [
     "translator = pipeline(task=\"translation\", model=\"facebook/nllb-200-distilled-600M\", torch_dtype=torch.bfloat16) \n",
     "\n",
@@ -71,10 +79,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'summary_text': 'Paris is the capital and most populous city of France, with an estimated population of 2,175,601 residents as of 2018. The City of Paris is the centre and seat of the government of the region and province of Île-de-France.'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "summarizer = pipeline(task=\"summarization\", model=\"./models/facebook/bart-large-cnn\", torch_dtype=torch.bfloat16)\n",
+    "summarizer = pipeline(task=\"summarization\", model=\"facebook/bart-large-cnn\", torch_dtype=torch.bfloat16)\n",
     "\n",
     "text = \"\"\"Paris is the capital and most populous city of France, with\n",
     "          an estimated population of 2,175,601 residents as of 2018,\n",
@@ -87,6 +105,51 @@
     "\n",
     "summary = summarizer(text, min_length=10, max_length=100)\n",
     "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sentence Embeddings using 🤗 Transformers Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install sentence-transformers\n",
+    "\n",
+    "from transformers.utils import logging\n",
+    "logging.set_verbosity_error()\n",
+    "\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "sentences1 = ['The cat sits outside',\n",
+    "              'A man is playing guitar',\n",
+    "              'The movies are awesome']\n",
+    "\n",
+    "embeddings1 = model.encode(sentences1, convert_to_tensor=True)\n",
+    "\n",
+    "sentences2 = ['The dog plays in the garden',\n",
+    "              'A woman watches TV',\n",
+    "              'The new movie is so great']\n",
+    "\n",
+    "embeddings2 = model.encode(sentences2, convert_to_tensor=True)\n",
+    "\n",
+    "# Use cosine similarity to compare sentences\n",
+    "from sentence_transformers import util\n",
+    "# Compares each sentence in embeddings1 to each in embeddings2. So, the comparison we are looking for is in the digonal of this matrix\n",
+    "cosine_scores = util.cos_sim(embeddings1,embeddings2)\n",
+    "print(cosine_scores)\n",
+    "for i in range(len(sentences1)):\n",
+    "    print(\"{} \\t\\t {} \\t\\t Score: {:.4f}\".format(sentences1[i],\n",
+    "                                                 sentences2[i],\n",
+    "                                                 cosine_scores[i][i]))\n"
    ]
   }
  ],
