--- a/DLAI-VectorDB-Embeddings_VAE.ipynb
+++ b/DLAI-VectorDB-Embeddings_VAE.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Embeddings - [Course - DLAI: Vector DBs](https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications) \n",
+    "# [Course - DLAI: Vector DBs](https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications) \n",
     "### Embedding MNIST images and NLP sentences into vectors."
    ]
   },
