--- a/DLAI-Embeddings-vertexAImodels.ipynb
+++ b/DLAI-Embeddings-vertexAImodels.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [DLAI - Understanding and Applying Text embeddings](https://learn.deeplearning.ai/courses/google-cloud-vertex-ai)\n"
+    "# [DLAI - Understanding and Applying Text embeddings](https://learn.deeplearning.ai/courses/google-cloud-vertex-ai)"
    ]
   },
   {
@@ -124,8 +124,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -162,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question Answering - no context / RAG\n",
+    "## LLMs for Question Answering\n",
     "- You can ask an open-ended question to the language model."
    ]
   },
@@ -256,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Semantic Search, Building a Q&A System"
+    "## LLMs for Semantic Search, Building a Q&A System"
    ]
   },
   {
@@ -310,8 +312,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
