--- a/DLAI-VEctorDB-NearestNeighalog.ipynb
+++ b/DLAI-VEctorDB-NearestNeighalog.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Course - DLAI: Vector DBs](https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications) "
+    "# [Course - DLAI: Vector DBs](https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications) "
    ]
   },
   {
