--- a/DLAI-FunctionCalling.ipynb
+++ b/DLAI-FunctionCalling.ipynb
@@ -13,6 +13,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install utils\n",
+    "from utils import query_raven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "USER_QUERY = \"Hey can you plot y=10x where x=1, 2, 3 for me?\"\n",
     "\n",
     "prompt = \\\n",
@@ -32,12 +42,13 @@
     "function_call = query_raven(prompt)\n",
     "\n",
     "print (function_call)\n",
-    "exec(function_call)"
+    "exec(function_call)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,43 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Function:\n",
-      "def draw_clown_face(face_color='yellow', \n",
-      "                    eye_color='black',\n",
-      "                    nose_color='red'):\n",
-      "    \"\"\"\n",
-      "    Draws a customizable, simplified clown face using matplotlib.\n",
-      "\n",
-      "    Parameters:\n",
-      "    - face_color (str): Color of the clown's face.\n",
-      "    - eye_color (str): Color of the clown's eyes.\n",
-      "    - nose_color (str): Color of the clown's nose.\n",
-      "    \"\"\"\n",
-      "\n",
-      "User Query: Hey can you draw a pink clown face with a red nose<human_end>\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'query_raven' from 'utils' (C:\\Users\\siddh\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\utils\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m raven_prompt_with_query \u001b[38;5;241m=\u001b[39m raven_prompt\u001b[38;5;241m.\u001b[39mformat(query\u001b[38;5;241m=\u001b[39mUSER_QUERY)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m (raven_prompt_with_query)\n\u001b[1;32m---> 24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m query_raven\n\u001b[0;32m     25\u001b[0m raven_call \u001b[38;5;241m=\u001b[39m query_raven(raven_prompt_with_query)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m (raven_call)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'query_raven' from 'utils' (C:\\Users\\siddh\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\utils\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "USER_QUERY = \\\n",
     "\"Hey can you draw a pink clown face with a red nose\" \n",
