--- a/decision-forests.ipynb
+++ b/decision-forests.ipynb
@@ -20,6 +20,37 @@
     "# In YDF, decision trees are trained with axis-aligned condition by default. \n",
     "# You can enable decision oblique trees with the split_axis=\"SPARSE_OBLIQUE\" parameter.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_decision_tree(training_examples):\n",
+    "  root = create_root() # Create a decision tree with a single empty root.\n",
+    "  grow_tree(root, training_examples) # Grow the root node.\n",
+    "  return root\n",
+    "\n",
+    "def grow_tree(node, examples):\n",
+    "  condition = find_best_condition(examples) # Find the best condition.\n",
+    "\n",
+    "  if condition is None:\n",
+    "    # No satisfying conditions were found, therefore the grow of the branch stops.\n",
+    "    set_leaf_prediction(node, examples)\n",
+    "    return\n",
+    "\n",
+    "  # Create two childrens for the node.\n",
+    "  positive_child, negative_child = split_node(node, condition)\n",
+    "\n",
+    "  # List the training examples used by each children.\n",
+    "  negative_examples = [example for example in examples if not condition(example)]\n",
+    "  positive_examples = [example for example in examples if condition(example)]\n",
+    "\n",
+    "  # Continue the growth of the children.\n",
+    "  grow_tree(negative_child, negative_examples)\n",
+    "  grow_tree(positive_child, positive_examples)"
+   ]
   }
  ],
  "metadata": {
