--- a/python-help.ipynb
+++ b/python-help.ipynb
@@ -139,12 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#! pip install nbmerge\n",
-    "!nbmerge DLAI-Embeddings-vertexAImodels.ipynb DLAI-VectorDB-Embeddings_VAE.ipynb > embeddings.ipynb"
+    "!nbmerge DLAI-Embeddings-vertexAImodels.ipynb DLAI-VectorDB-Embeddings_VAE.ipynb > embeddings1.ipynb"
    ]
   }
  ],
